# docs/swagger.yaml
@@ -39,6 +39,17 @@ definitions:
       user_id:
         type: integer
     type: object
+  api.VideoListResponse:
+    properties:
+      status_code:
+        type: integer
+      status_msg:
+        type: string
+      video_list:
+        items:
+          $ref: '#/definitions/vo.VideoVo'
+        type: array
+    type: object
   vo.UserVo:
     properties:
       follow_count:
@@ -73,7 +84,7 @@ definitions:
         type: integer
       id:
         description: 视频id
-        type: string
+        type: integer
       is_favorite:
         description: 是否喜欢
         type: boolean
@@ -138,6 +149,27 @@ paths:
           schema:
             $ref: '#/definitions/api.Response'
       summary: 上传视频
+      tags:
+      - 基础模块
+  /douyin/publish/list/:
+    get:
+      consumes:
+      - application/json
+      description: 获取投稿视频
+      parameters:
+      - description: 用户token
+        in: query
+        name: token
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.VideoListResponse'
+      summary: 获取投稿视频
       tags:
       - 基础模块
   /douyin/user/:
